# rust-analyzer-issue

./: README.md  meson.build
proj/: Cargo.toml
proj/src/: lib.rs  main.rs
